# city-gig-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
job_scraper/: __init__.py  crawler.py  detection.py  discovery_overpass.py  main.py  models.py  robots.py
web/: app.py
