[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-scraper"
version = "0.1.0"
description = "Berlin hospitality job scraper"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]",
    "beautifulsoup4",
    "lxml",
    "tenacity",
]

[tool.setuptools.packages.find]
include = ["job_scraper"]


